fix: button text align -- smaller buttons down -- bigger buttons left

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
     height: 100%;
     padding: 0;
 }
+
 .btn-group {
     margin-left: 20px;
 }
@@ -34,13 +35,14 @@ body {
     font-size: 18px;
     cursor: pointer;
     padding: 20px 40px;
-    width: 300px;
+    width: 275px;
     display: block;
     margin: 10px 20px;
     border-radius: 5px;
     position: relative;
     text-decoration: none;
-    text-align: center;
+    padding-left: 80px;
+    text-align: left;
 }
 
 .btn-group > a.button::before {
@@ -51,7 +53,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 17%;
-    background-color: rgb(58, 58, 58);
+    background-color: rgb(60, 60, 60);
     position: absolute;
     left: 0;
     top: 0;
@@ -69,7 +71,7 @@ body {
     background-image: url('emojis/eng.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-size : 3cqmax;
+    background-size : 40%;
     justify-content: center;
 }
 
@@ -96,8 +98,10 @@ body {
 .btn-group .half-group {
     display: flex;
 }
+
 .btn-group .half-group a.button {
     text-align: center;
+    line-height: 1.73;
     width: calc(50% - 20px);
     padding: 10px 40px;
     height: 30px;
@@ -131,6 +135,10 @@ body {
     body {
         align-items: center;
         justify-content: center;
+    }
+    .btn-group {
+        justify-content: center;
+        align-items: center;
     }
     .image-container {
         display: none;
